white bg, stop jumping text on transition

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -5,6 +5,9 @@
 @require './arrow'
 @import url('https://fonts.googleapis.com/css?family=Source+Serif+Pro:600')
 
+html
+  background: #141d26
+
 html, body
   padding: 0
   margin: 0
@@ -108,6 +111,7 @@ strong
 h1, h2, h3, h4, h5, h6
   font-weight: 600
   line-height: 1.25
+  transform: translate3d(0, 0, 0)
 
   .content:not(.custom) > &
     margin-top: 0.5rem - $navbarHeight
@@ -179,6 +183,9 @@ th, td
   padding-top: $navbarHeight
 
 .theme-container
+  background: #FFFFFF
+  min-height: 100vh
+
   &.sidebar-open
     .sidebar-mask
       display: block
@@ -189,7 +196,7 @@ th, td
         margin-top: 1.5rem
         padding-top: 0
 
-@media (min-width: (((((((((((((((((((((((($MQMobile + 1px)))))))))))))))))))))))))
+@media (min-width: (((((((((((((((((((((((((((((((((($MQMobile + 1px)))))))))))))))))))))))))))))))))))
   .theme-container.no-sidebar
     .sidebar
       display: none
@@ -198,3 +205,4 @@ th, td
       padding-left: 0
 
 @require './mobile.styl'
+@require './dark-theme'
